--- a/config.env
+++ b/config.env
@@ -49,8 +49,8 @@ MEGA_PASSWORD = ""
 USENET_SERVERS = [{'name': 'main', 'host': '', 'port': 5126, 'timeout': 60, 'username': '', 'password': '', 'connections': 8, 'ssl': 1, 'ssl_verify': 2, 'ssl_ciphers': '', 'enable': 1, 'required': 0, 'optional': 0, 'retention': 0, 'send_group': 0, 'priority': 0}]
 
 # Update
-UPSTREAM_REPO = "https://  HuntingBots-Team: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@github.com/HuntingBots-Team/ZeeMirror"
-UPSTREAM_BRANCH = "Ghost"
+UPSTREAM_REPO = "https://HuntingBots-Team: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@github.com/HuntingBots-Team/zee_mirror"
+UPSTREAM_BRANCH = "main"
 
 # Leech Settings
 AS_DOCUMENT = "False" # True or False
